descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2012-04-XX  Release 7.21.X                                     ---
----------------------------------------------------------------------

* fixed memory corruption in vegetation generator tool - Sean Morrison
* fixed ARS bounding box size affecting overlap handling - Cliff Yapp
* fixed bug in fast4-g importer handling HOLE/WALL cards - Nick Reed
* fixed field truncation bug in comgeom-g importer - Tom Browder
* fixed log file clobber bug in the benchmark suite - Cliff Yapp
* improved support for the Intel C/C++ compiler (icc) - Sean Morrison
* now sorting top level object alphabetically in rtwizard - Cliff Yapp
* "About BRL-CAD" article translation to Russian - Ilya
* "About BRL-CAD" article translation to Armenian - Karen Mgebrova
* improved handling of rgb/color attributes by adjust cmd - Cliff Yapp
* added a basic SWIG spec file - Erik Greenwald
* fixed referenced object highlighting in archer treeview - Bob Parker
* fixed error handling input reading failure in burst - Sean Morrison
* fixed memory double-freeing issue in shp-g - Erik Greenwald
* added optional scaling parameter to autoview command - Sean Morrison
* fixed extrude object bug rendering at near right angles - Bob Parker
* added -h option to nirt to suppress header printing - Cliff Yapp
* fixed nirt attribute reporting for specified attributes - Cliff Yapp
* fixed ebm/dsp/vol/hf corruption on 64-bit big endian - Sean Morrison
* fixed step-g importer memory management issues - Keith Bowman
* improved tab-completion behavior for mged and archer - Sean Morrison
* fixed pervasive string handling memory leak - Tom Browder
* improved table output formatting for 'analyze' command - Tom Browder
* upgraded libpng to 1.5.7 - Cliff Yapp
* fixed rtweight to handle incorrect lines - Tom Browder