@@ -30,7 +30,6 @@ bin_PROGRAMS = \
 	imod \
 	istats \
 	smod \
-	syn \
 	u-a \
 	u-bw \
 	u-d \
@@ -143,9 +142,6 @@ ustats_LDADD = ${BU}
 dpeak_SOURCES = dpeak.c
 dpeak_LDADD = ${BU}
 
-syn_SOURCES = syn.c
-syn_LDADD = ${BU} ${LIBM}
-
 damdf_SOURCES = damdf.c
 damdf_LDADD = ${BU}
 
@@ -192,7 +188,6 @@ FAST_OBJECTS = \
 	$(imod_OBJECTS) \
 	$(istats_OBJECTS) \
 	$(smod_OBJECTS) \
-	$(syn_OBJECTS) \
 	$(u_a_OBJECTS) \
 	$(u_bw_OBJECTS) \
 	$(u_d_OBJECTS) \
